2005-10-03  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (java.tags): Updated.

2005-10-03  Tom Tromey  <tromey@redhat.com>

	* glue.hh (hex_value): Undef.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* driver.cc (arg_info::dependencies): New field.
	(arg_info::print_phonies): Likewise.
	(arg_info::include_system_files): Likewise.
	(arg_info::dependency_file): Likewise.
	(arg_info::target): Likewise.
	(arg_info::deps_to_file): Likewise.
	(arg_info): Initialize it.
	(~arg_info): New destructor.
	(arg_info::init_dependencies): New method.
	(finish): Write out dependencies.
	(handle_option): Handle -M family of options.
	* glue.hh: Include mkdeps.h.

2005-09-11  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* driver.cc (gcjx::post_options): Set global compiler before
	processing elements in CLASSPATH to avoid segfaulting on diagnostics.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* tree.cc (find_method): Use primitive_void_type instead of NULL
	when printing error.
	(visit_cast): Special case Character unboxing.

2005-06-14  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_method): Don't initialize class from static
	initializer.

2005-06-13  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_assignment): Fix types.
	(visit_return): Fix types.
	* abi.cc (build_new): Changed type of allocation call.
	* decl.cc (initialize_builtin_functions): Changed return type of
	_Jv_AllocObject and _Jv_AllocObjectNoFinalizer.

2005-06-04  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_one_method_record): Fixed 'ncode' value.

2005-06-04  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_one_method_record): Use
	builtin_Jv_ThrowAbstractMethodError.
	* hooks.hh (builtin_Jv_ThrowAbstractMethodError): Declare.
	* decl.cc (builtin_Jv_ThrowAbstractMethodError): New global.
	(initialize_builtin_functions): Initialize it.

2005-05-15  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Use build_label.
	(find_label): Set DECL_ARTIFICIAL.